corpus/baselines/compiler/importNonExportedMember9.errors.txt
b.js(1,10): error TS2597: 'Foo' can only be imported by using a 'require' call or by using a default import.


==== a.ts (0 errors) ====
    class Foo {}
    export = Foo;
    
==== b.js (1 errors) ====
    import { Foo } from './a';
             ~~~
!!! error TS2597: 'Foo' can only be imported by using a 'require' call or by using a default import.